--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="regles">
         <p class="titre">Règles du jeu :</p>
         <p>Lorsque les deux joueurs sont côte à côte sur des cases adjacentes (horizontalement ou verticalement), un combat à
-            mort s'engage. Vous avez le choix entre vous défendre (ce qui réduira vos dégâts de 50%) ou d'attaquer votre adversaire.</p>
+            mort s'engage. Vous avez le choix entre vous défendre (ce qui réduira vos prochains dégâts de 50%) ou d'attaquer votre adversaire.</p>
         <p>Avant le combat, vous avez la possibilité de ramasser une des différentes armes sur le plateau. Chaque arme possède des dégâts différents.</p>
         <p>Le premier dont les points de vie tombent à 0 perd !</p>
     </div>
@@ -89,13 +89,13 @@
 
 <div id="modalVictoireJ1" class="modal" aria-hidden="true" role="dialog" style="display: none;">
     <div class="modalVictoire"><h1>Victoire de J1 !</h1>
-        <img src="img/vicJ1.png"/>
+        <div class="imgS"><img src="img/vicJ1.png"/></div>
         <input type="button" class="restart" value="Lancer une nouvelle partie">
     </div>
 </div>
 <div id="modalVictoireJ2" class="modal" aria-hidden="true" role="dialog" style="display: none;">
     <div class="modalVictoire"><h1>Victoire de J2 !</h1>
-        <img src="img/vicJ2.png"/>
+        <div class="imgS"><img src="img/vicJ2.png"/></div>
         <input type="button" class="restart" value="Lancer une nouvelle partie">
     </div>
 </div>
@@ -106,9 +106,6 @@
 <script type='module' src='js/personnages.js'></script>
 <script type='module' src='js/plateau.js'></script>
 <script type='module' src='js/case.js'></script>
-<script type='module' src="js/main.js"></script>
-<script type='module' src="js/html.js"></script>
-
 </body>
 
 </html>
